# philip

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  run-host.sh
docs/: DOCKER_USAGE.md  JSONRPC_CHANNEL.md  Reference.md  WIKI.md  llm-wiki-search-architecture.md
philip/: plugin.py  vision_client.py  vision_tools.py
philip/capabilities/wiki/: __init__.py  db9.py  graph.py  skills.py  wiki.py
philip/capabilities/wiki/template/: AGENTS.md
philip/capabilities/wiki/template/rules/: SECURITY.md  WORKSPACE.md
philip/capabilities/wiki/template/rules/axioms/: t09_data_strategy_mdp.md
philip/capabilities/wiki/template/rules/skills/: INDEX.md
philip/cli/: main.py
philip/cli/commands/: __init__.py  wiki.py
philip/plugins/: __init__.py
philip/skills/bestpractice-ai-programming-mindset/: SKILL.md
philip/skills/guide-scala-direct-style/: SKILL.md
philip/skills/guide-scala-direct-style/references/: agents-md-template.md
philip/skills/tool-semantic-search/: SKILL.md
philip/skills/tool-skill-optimizer/: SKILL.md
philip/skills/workflow-analytical-writing/: SKILL.md
philip/skills/workflow-deep-research-survey/: SKILL.md
philip/skills/workflow-github/: SKILL.md
philip/skills/workflow-gitlab/: SKILL.md
philip/skills/workflow-knowledge-flywheel/: SKILL.md
philip/skills/workflow-parallel-subagents/: SKILL.md
philip/tools/: __init__.py  vision_client.py  vision_settings.py  vision_tools.py
philip/wiki/: __init__.py  config.py  db9.py  graph.py  search.py  skills.py  sync.py  wiki.py
philip/wiki/template/: README.md
philip/wiki/template/rules/: SECURITY.md  SOUL.md  WORKSPACE.md
philip/wiki/templates/: agent.md
philip/wiki/templates/rules/: COMMUNICATION.md  USER.md
philip/wiki/templates/wiki/: wiki-agent.md
skills/llm-wiki/: SKILL.md
src/philip/: __init__.py
src/philip/capabilities/finance/: __init__.py  tech_rotation.py
src/philip/capabilities/wiki/: __init__.py  config.py  db9.py  graph.py  search.py  skills.py  sync.py  wiki.py
src/philip/capabilities/wiki/template/: config.toml
src/philip/capabilities/wiki/template/rules/skills/: INDEX.md
src/philip/capabilities/wiki/template/wiki/: wiki-agent.md  wiki-log.md  wiki-schema.md
src/philip/channels/: __init__.py  jsonrpc_channel.py
src/philip/cli/: __init__.py  __main__.py  adapter.py  main.py
src/philip/cli/chat/: __init__.py
src/philip/cli/commands/: chat.py  rpc.py  serve.py
src/philip/cli/finance/: __init__.py  momentum.py
src/philip/cli/gateway/: __init__.py  start.py
src/philip/cli/wiki/: __init__.py  graph.py  init.py  search.py  status.py  sync.py
src/philip/plugins/: plugin.py
src/philip/server/: __init__.py  jsonrpc.py  service.py  session_store.py  transport_http.py  transport_ws.py
src/philip/skills/analyzer-structural-stability/: SKILL.md
src/philip/skills/bestpractice-ai-debugging-diagnosis/: SKILL.md
src/philip/skills/bestpractice-ai-product-design/: SKILL.md
src/philip/skills/bestpractice-multi-agent-analysis/: SKILL.md
src/philip/skills/guard-security/: SKILL.md
src/philip/skills/guide-scala-direct-style/references/: code-patterns.md  example-spec.md
src/philip/skills/workflow-bilibili-whisper-transcription/: SKILL.md
src/philip/skills/workflow-cognitive-profile-extraction/: SKILL.md
src/philip/skills/workflow-llm-wiki/: SKILL.md
src/philip/skills/workflow-office-hours/: SKILL.md
src/philip/skills/workflow-spark/: SKILL.md
src/philip/tools/: vision_client.py  vision_tools.py
tests/: test_chat_cli.py  test_cli.py  test_db9.py  test_finance_cli.py  test_finance_momentum_cli.py  test_jsonrpc.py  test_jsonrpc_channel.py  test_plugin.py  test_serve.py  test_vision_tools.py  test_wiki.py
