[project]
name = "philip"
version = "0.2.0"
description = "Bub main entrypoint project — startup, sandbox, and plugin assembly"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bub",
    "bub-im-bridge @ git+https://github.com/iodone/bub-im-bridge.git@v0.5.1",
    "bub-web-search",
    "bub-schedule",
]

[tool.uv.sources]
bub = { path = "../bub", editable = true }
bub-web-search = { path = "../bub-contrib/packages/bub-web-search", editable = true }
bub-schedule = { path = "../bub-contrib/packages/bub-schedule", editable = true }

[dependency-groups]
dev = [
    "black>=24.0",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.entry-points.bub]
philip = "philip.plugin:PhilipPlugin"

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
default-groups = []

[tool.ruff]
target-version = "py312"
src = ["philip"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
