[project]
name = "philip"
version = "0.2.0"
description = "Bub main entrypoint project — startup, sandbox, and plugin assembly"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9",
    "bub",
    "bub-im-bridge",
    "bub-web-search",
    "bub-schedule",
    "psycopg2-binary>=2.9",
    "python-frontmatter>=1.0",
    "rub",
    "toml>=0.10",
]

[project.scripts]
philip = "philip.cli.__main__:app"

[tool.uv.sources]
bub = { git = "https://github.com/bubbuild/bub.git", branch = "main" }
bub-im-bridge = { git = "https://github.com/iodone/bub-im-bridge.git", tag = "v0.7.0" }
bub-web-search = { git = "https://github.com/bubbuild/bub-contrib.git", branch = "main", subdirectory = "packages/bub-web-search" }
bub-schedule = { git = "https://github.com/bubbuild/bub-contrib.git", branch = "main", subdirectory = "packages/bub-schedule" }
rub = { git = "https://github.com/iodone/rubick.git", branch = "main" }

[dependency-groups]
dev = [
    "black>=24.0",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.entry-points.bub]
philip = "philip.plugins.plugin:PhilipPlugin"

[project.entry-points.'rub.adapters']
philip = "philip.cli.adapter:PhilipAdapter"

[tool.hatch.build.targets.wheel]
packages = ["src/philip"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
default-groups = []

[tool.ruff]
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
